# WindowsWallpaperSwitcher

./: CMakeLists.txt  README.md  build.ps1
app/: download.py  main.py  ui.py  user32.py  wallpaper_dicts.py
app/ui/: misc.py  ui.py  ui_global_vars.py
app/ui/pages/: main_page.py  selection_page.py
include/: Download.h  Wallpapers.h
include/ui/: mainPage.h  selectionPage.h  ui.h
src/: Download.cpp  Wallpapers.cpp  main.cpp
src/ui/: mainPage.cpp  selectionPage.cpp  ui.cpp
